# cubesat

./: .gitignore  CMakeLists.txt  README.md  binar.cpp  bitmapRW.cpp  bitmapRW.h  close-open.cpp  median.cpp  requirements.txt  test.py
include/: bitmapRW.h  border_checker.h
src/: bitmapRW.cpp
